# MSight_base

./: .dockerignore  Dockerfile  LICENSE  README.md  pyproject.toml
examples/: visualization.py
examples/basemap_configs/: crop.html  huron_geddes.json  huron_plymouth.json  isc.json  main_stadium.json  plymouth_beal.json  plymouth_bishop.json  plymouth_bishop_v2.json  plymouth_epa.json  plymouth_georgetown.json  roundabout.json  roundabout_large.json
examples/example_data/traj_geddes_huron/: 2023-09-05 10-00-00-039784.json  2023-09-05 10-00-00-252053.json  2023-09-05 10-00-00-451861.json  2023-09-05 10-00-00-651656.json  2023-09-05 10-00-00-851829.json  2023-09-05 10-00-01-040001.json  2023-09-05 10-00-01-251610.json  2023-09-05 10-00-01-451511.json  2023-09-05 10-00-01-652387.json  2023-09-05 10-00-01-850873.json  2023-09-05 10-00-02-039764.json  2023-09-05 10-00-02-251168.json  2023-09-05 10-00-02-451466.json  2023-09-05 10-00-02-651289.json  2023-09-05 10-00-02-851608.json  2023-09-05 10-00-03-040471.json  2023-09-05 10-00-03-251513.json  2023-09-05 10-00-03-451386.json  2023-09-05 10-00-03-651733.json  2023-09-05 10-00-03-851375.json  2023-09-05 10-00-04-039638.json  2023-09-05 10-00-04-251769.json  2023-09-05 10-00-04-452283.json  2023-09-05 10-00-04-651613.json  2023-09-05 10-00-04-850960.json  2023-09-05 10-00-05-040213.json  2023-09-05 10-00-05-251136.json  (+273 more)
msight_base/: __init__.py  behavior.py  detection.py  map.py  road_object.py  road_user.py  trajectory.py
msight_base/utils/: cls.py  data.py
msight_base/visualizer/: utils.py  visualizer.py
