[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msight_base"
version = "0.1.0"
description = "Object classes and base trajectory management for the MSight system"
authors = [
    { name = "Rusheng Zhang", email = "zrs1990@gmail.com" }
]
dependencies = [
    "numpy",
    "opencv-python",
    "tqdm"
]
requires-python = ">=3.6"
